--- a/custom-search.html
+++ b/custom-search.html
@@ -1,29 +1,26 @@
-<head>
-<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://kit.fontawesome.com/5239a934b3.js"></script>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-
-<!-- Bootstrap -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="static/css/main.css')}}">
-<link rel="stylesheet" href="static/style.css')}}">
-<link rel="stylesheet" href="static/css/query-builder.default.css">
-
-
-</head>
-<body>
-<div id="main-container-search-bar-not-activated" style="height:100%; display:block">
-    <div id="builder" style="padding-top:20px"></div>
-     
-</div>
-
-
-<script src="static/js/query-builder.standalone.js"></script>
-<script src="static/js/main.js"></script>
-
-</body>
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+		<link rel="stylesheet" href="static/css/query-builder.default.css">
+		<link rel="stylesheet" href="static/css/query-builder.advanced.css">
+		<link rel="stylesheet" href="static/css/main.css">
+	
+		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+	</head>
+	<body>
+	<div id="main-container-search-bar-not-activated" style="height:100%; display:block">
+		<div id="builder" style="padding:20px;"></div>     
+		<div class="btn-group">
+			<button class="waves-effect waves-light btn-small purple" id="get_rule">Get Rule</button>
+		</div>
+	</div>
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<script src="static/js/query-builder.standalone.js"></script>
+	<script src="static/js/query-builder.advanced.js"></script>
+	<script src="static/js/main.js"></script>
+	
+	</body>
+</html>
