add select2 box

--- a/custom-search.html
+++ b/custom-search.html
@@ -3,8 +3,10 @@
 	<head>
 		<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/css/select2.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="static/css/query-builder.default.css">
 		<link rel="stylesheet" href="static/css/query-builder.advanced.css">
+		<link rel="stylesheet" href="static/css/select2-materialize.css">
 		<link rel="stylesheet" href="static/css/main.css">
 	
 		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
@@ -18,6 +20,7 @@
 	</div>
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/js/select2.min.js"></script>
 	<script src="static/js/query-builder.standalone.js"></script>
 	<script src="static/js/query-builder.advanced.js"></script>
 	<script src="static/js/main.js"></script>
