--- a/custom-search.html
+++ b/custom-search.html
@@ -22,6 +22,7 @@
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/js/select2.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 	<script src="static/js/query-builder.standalone.js"></script>
 	<script src="static/js/query-builder.advanced.js"></script>
 	<script src="static/js/main.js"></script>
