--- a/custom-search.html
+++ b/custom-search.html
@@ -3,8 +3,8 @@
 	<head>
 		<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/css/select2.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="static/css/materialize.css">
 		<link rel="stylesheet" href="static/css/query-builder.default.css">
 		<link rel="stylesheet" href="static/css/query-builder.advanced.css">
 		<link rel="stylesheet" href="static/css/select2-materialize.css">
@@ -13,7 +13,7 @@
 		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 	</head>
 	<body>
-	<div id="main-container-search-bar-not-activated" style="height:100%; display:block">
+	<div class="materialize-style" id="main-container-search-bar-not-activated" style="height:100%; display:block">
 		<div id="builder" style="padding:20px;"></div>     
 		<div class="btn-group">
 			<button class="waves-effect waves-light btn-small purple" id="get_rule">Get Rule</button>
